objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Job Lead</fullName>
        <description>Lead Process to follow for potential job leads that come in</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Project Lead</fullName>
        <description>Lead process for freelance projects</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Volunteer Leads</fullName>
        <description>Unpaid volunteer roles</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jobs_Website__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jobs Website</label>
        <referenceTo>Jobs_Website__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Job_Lead</fullName>
        <active>true</active>
        <businessProcess>Job Lead</businessProcess>
        <description>Job lead for employment - permanent, full time roles</description>
        <label>Job Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Lead</fullName>
        <active>true</active>
        <businessProcess>Project Lead</businessProcess>
        <description>Leads for freelance projects</description>
        <label>Project Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer_Lead</fullName>
        <active>true</active>
        <businessProcess>Volunteer Leads</businessProcess>
        <label>Volunteer Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Industry_Field_Required_When_Converting</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(ISPICKVAL(Industry, &apos;&apos;) , ISBLANK( Phone ),  ISPICKVAL( LeadSource ,&apos;&apos;) ), IsConverted)</errorConditionFormula>
        <errorDisplayField>Industry</errorDisplayField>
        <errorMessage>Please select Industry, and lead source before converting lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Field_Required_Status_is_Working</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISBLANK(Phone) ,NOT (ISPICKVAL( Status , &apos;Open - Not Contacted&apos;)))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter phone # when Lead Status is Working Contacted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Jobs_Website_on_Lead_Source_Web</fullName>
        <active>false</active>
        <description>Whenever Lead Source = Web, Jobs Website has to be populated</description>
        <errorConditionFormula>AND(ISPICKVAL(LeadSource,&apos;Web&apos;),Jobs_Website__c = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Jobs_Website__c</errorDisplayField>
        <errorMessage>Jobs Website must be specified</errorMessage>
    </validationRules>
</CustomObject>